<resources>
    <string name="mine_app_name">Mine</string>
    <string name="mineMallinformationMallName">华丰食品城</string>
    <string name="mineMallinformationAd">来这里找实惠吧!</string>
    <string name="mineHearderBarTitle">华丰食品城</string>
    <string name="minePersonalImg">头像</string>
    <string name="minePersonalAccount">账号</string>
    <string name="minePersonalName">昵称</string>
    <string name="minePersonalPhone">手机</string>
    <string name="minePersonalVip">会员级别</string>
    <string name="minePersonalMore">更多</string>
    <string name="mineFavorites">收藏夹</string>
    <string name="mineHistory">浏览历史</string>
    <string name="mineAccount">账户金额</string>
    <string name="mineMyorder">我的订单</string>
    <string name="mineMyorderA">待付款</string>
    <string name="mineMyorderB">待发货</string>
    <string name="mineMyorderC">待收货</string>
    <string name="mineMyorderD">全部订单</string>
    <string name="mineHeaderZiliao">编辑资料></string>
    <string name="mineSetupHeaderTitle">设置</string>
    <string name="mineSetupAdress">收货地址</string>
    <string name="mineSetupPassword">修改密码</string>
    <string name="mineSetupVersion">检查版本V1.0</string>
    <string name="mineSetupFeedback">意见反馈</string>
    <string name="mineSetupPhoneTip">客服电话</string>
    <string name="mineSetupPhone">18879792873</string>
    <string name="mineSetupWifi">非WiFi下省流模式</string>
    <string name="mineSetupHistory">浏览记录</string>
    <string name="mineSetupClear">清理缓存</string>
    <string name="mineSetupSignout">退出登录</string>
    <string name="mineShippongAddressBacktitle">收货地址</string>
    <string name="mineShippongAddressAdd">添加收货地址</string>
    <string name="minePhoneEdit">输入手机号</string>
    <string name="mineVerificationCode">输入验证码</string>
    <string name="mineVerificationCodeBt">获取验证码</string>
    <string name="mineNewPasswordEdit">输入新密码</string>
    <string name="mineConfirmPasswordButton">确认修改</string>
    <string name="mineFeedbackPrompt">请选择反馈问题的类型</string>
    <string name="mineFeedbackFirstQuestion">发货、售后等交易问题</string>
    <string name="mineFeedbackSales">联系客服</string>
    <string name="mineFeedbackSecondQuestion">app使用问题</string>
    <string name="mineFeedbackAppQuestion">功能异常和产品建议等</string>
    <string name="mineAddAddressName">收货人</string>
    <string name="mineAddAddressPhone">手机号码</string>
    <string name="mineAddAddressArea">所在地区</string>
    <string name="mineAddAddressAddress">详细地址：如街道、门牌号、小区、楼栋号、单元室等</string>
    <string name="mineAddAddressSetup">设为默认地址</string>
    <string name="mine_">hhh</string>
    <string name="mineWeChatPayment">微信支付</string>
    <string name="mineArrivalTime">到账时间</string>
    <string name="mineWithdrawalAmount">提现金额</string>
    <string name="mineAccountBalance">账户余额</string>
    <string name="mineWithdrawal">提现</string>
    <string name="mineSearchTip">请输入搜索内容</string>
    <string name="mineSearchBtn">搜索</string>
    <string name="mineSearchHistory">历史搜索</string>
    <string name="mineSearchFind">搜索发现</string>
    <string name="mineSearchMore">更多</string>

    <style name="minedDialogStyle" parent="android:style/Theme.Dialog">
        <item name="windowActionBar">false</item>
        <item name="windowNoTitle">true</item>
        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
        <item name="android:statusBarColor">@android:color/transparent</item>
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowFrame">@null</item>
        <item name="android:windowAnimationStyle">@style/mineAnim_scale</item>//这个用来设置acitivity弹出的风格
    </style>
    <style name="mineAnim_scale" parent="@android:style/Animation.Activity">
        <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>
        <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
    </style>
</resources>
