<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ChangPasswordActivity"
    android:background="@color/white">
    <com.cxyz.widget.HeaderBar
        android:id="@+id/changPasswordBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        app:background="@color/common_colorPrimary"
        tools:ignore="MissingConstraints" />
    <!-- 手机输入区 -->
       <EditText
           android:id="@+id/etPhoneEdit"
           android:layout_width="match_parent"
           android:layout_height="68dp"
           android:background="@null"
           android:inputType="phone"
           android:hint="@string/minePhoneEdit"
           android:textSize="13.3dp"
           android:textColor="#b2b2b2"
           android:gravity="bottom"
           android:paddingBottom="8dp"
           android:layout_marginLeft="30dp"
           app:layout_constraintTop_toBottomOf="@id/changPasswordBar"
           tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/changPasswordDivider01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_divider"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginLeft="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/etPhoneEdit"
        tools:ignore="MissingConstraints" />
    <!-- 验证码输入区 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/VerificationCode"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/changPasswordDivider01"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/etVerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/mineVerificationCode"
            android:paddingBottom="8dp"
            android:textColor="#b2b2b2"
            android:textSize="13.3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />
        <Button
            android:layout_width="77.3dp"
            android:layout_height="21.3dp"
            android:background="@drawable/mine_button_bg"
            android:text="@string/mineVerificationCodeBt"
            android:textSize="13.3dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
           />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/changPasswordDivider02"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_divider"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginLeft="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/VerificationCode"
        tools:ignore="MissingConstraints" />
    <!-- 新密码部分 -->
    <EditText
        android:id="@+id/etNewPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@null"
        android:hint="@string/mineNewPasswordEdit"
        android:textSize="13.3dp"
        android:textColor="#d2d2d2"
        android:gravity="bottom"
        android:paddingBottom="8dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/changPasswordDivider02"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/changPasswordDivider03"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_divider"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginLeft="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/etNewPasswordEdit"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnConfirmChanges"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="57dp"
        android:text="@string/mineConfirmPasswordButton"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/changPasswordDivider03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
       android:background="@drawable/mine_button_bg"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>