<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    tools:context=".ui.activity.SetUpActivity">
    <com.cxyz.widget.HeaderBar
        android:id="@+id/setUpHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_header_bar_height"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        app:backText="@string/mineSetupHeaderTitle"
        app:background="@color/common_colorPrimary"/>
    <View
        android:id="@+id/setUpDivider01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_margin_middle"
        app:layout_constraintTop_toBottomOf="@+id/setUpHeaderBar"
        android:background="@color/common_bg"
        tools:ignore="MissingConstraints" />
    <!-- 收货地址 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        app:layout_constraintTop_toBottomOf="@id/setUpDivider01"
        android:background="@color/white"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupAdress"
            android:textSize="@dimen/text_middle_size"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_small"
            android:background="@mipmap/mine_personal_back"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/setUpDivider02"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_bg"
        app:layout_constraintTop_toBottomOf="@id/setUpAddress"
        tools:ignore="MissingConstraints" />
    <!-- 修改密码 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpAddress"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupPassword"
            android:textSize="@dimen/text_middle_size"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_small"
            android:background="@mipmap/mine_personal_back"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/setUpDivider03"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_margin_middle"
        app:layout_constraintTop_toBottomOf="@+id/setUpPassword"
        android:background="@color/common_bg"
        tools:ignore="MissingConstraints" />
    <!-- 检测版本 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpVersion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpDivider03"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupVersion"
            android:textSize="@dimen/text_middle_size"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_small"
            android:background="@mipmap/mine_personal_back"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- 意见反馈-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpFeedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpVersion"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupFeedback"
            android:textSize="@dimen/text_middle_size"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_small"
            android:background="@mipmap/mine_personal_back"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/setUpDivider04"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_divider"
        app:layout_constraintTop_toBottomOf="@id/setUpFeedback"
        tools:ignore="MissingConstraints" />
    <!-- 服务电话 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpFeedback"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/phoneTip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupPhoneTip"
            android:textSize="@dimen/text_middle_size"
            />
        <TextView
            android:id="@+id/tvPhone"
            android:autoLink="phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/mineSetupPhone"
            android:paddingLeft="@dimen/common_padding_middle"
            android:paddingRight="200dp"
            app:layout_constraintLeft_toRightOf="@id/phoneTip"
            android:textSize="@dimen/text_middle_size"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_small"
            android:background="@mipmap/mine_personal_back"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/setUpDivider05"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_margin_middle"
        app:layout_constraintTop_toBottomOf="@+id/setUpPhone"
        android:background="@color/common_bg"
        tools:ignore="MissingConstraints" />
    <!-- 非WiFi下省流提示 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpWifi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpDivider05"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupWifi"
            android:textSize="@dimen/text_middle_size"
            />
        <Switch
            android:id="@+id/swh_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_middle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/setUpDivider06"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_divider"
        app:layout_constraintTop_toBottomOf="@id/setUpWifi"
        tools:ignore="MissingConstraints" />
    <!-- 浏览记录-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpHistory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpWifi"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupHistory"
            android:textSize="@dimen/text_middle_size"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin_small"
            android:background="@mipmap/mine_personal_back"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/setUpDivider07"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_height"
        android:background="@color/common_divider"
        app:layout_constraintTop_toBottomOf="@id/setUpHistory"
        tools:ignore="MissingConstraints" />
    <!--   清楚缓存-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setUpClear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/setUpHistory"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mineSetupClear"
            android:textSize="@dimen/text_middle_size"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/common_colorPrimary"
        android:text="@string/mineSetupSignout"
        android:textSize="@dimen/text_large_size"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>